llvm-toolchain-12 (1:12.0.1-3) unstable; urgency=medium

  * Build libunwind only on amd64 arm64 armhf i386
    mips64el ppc64el ppc64 riscv64 sparc sparc64
    Not supported on s390x for example

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Aug 2021 11:42:20 +0200

llvm-toolchain-12 (1:12.0.1-2) unstable; urgency=medium

  * Generate libunwind-12 & libunwind-12-dev packages
  * Add the following option to the libc++ build:
    -DLIBCXX_ENABLE_STATIC_ABI_LIBRARY=ON
    -DLIBCXX_STATICALLY_LINK_ABI_IN_STATIC_LIBRARY=ON
    -DLIBCXX_STATICALLY_LINK_ABI_IN_SHARED_LIBRARY=OFF
     to address upstream bug 46321
  * Make libc++abi use libunwind

  [ Kasper Kantz ]
  * Add riscv64 architecture in control
    enable liblldb, libomp and others which are
    currently unavailable in riscv64 repository.

  [ Krzysztof Aleksander Pyrkosz ]
  * Add libxml2 as a dependency as it is necessary
    for llvm manifest tool (llvm-mt)
    (Closes: #990537)

  [ Jordan Justen ]
  * d/rules: Adjust cmake defines to fix libclc.pc paths
  * Add the following option to the libc++ build:
    -DLIBCXX_ENABLE_STATIC_ABI_LIBRARY=ON
    -DLIBCXX_STATICALLY_LINK_ABI_IN_STATIC_LIBRARY=ON
    -DLIBCXX_STATICALLY_LINK_ABI_IN_SHARED_LIBRARY=OFF
     to address upstream bug 46321
  * Build libunwind

  [ Kasper Kantz ]
  * Add riscv64 architecture in control
    enable liblldb, libomp and others which are
    currently unavailable in riscv64 repository.

  [ Krzysztof Aleksander Pyrkosz ]
  * Add libxml2 as a dependency as it is necessary
    for llvm manifest tool (llvm-mt)
    (Closes: #990537)

  [ Jordan Justen ]
  * d/rules: Adjust cmake defines to fix libclc.pc paths

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 12 Jul 2021 08:19:59 +0200

llvm-toolchain-12 (1:12.0.1-1) unstable; urgency=medium

  * New upsream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 09 Jul 2021 09:13:12 +0200

llvm-toolchain-12 (1:12.0.1~+rc4-1) unstable; urgency=medium
