@@ -3,6 +3,8 @@ llvm-toolchain-12 (1:12.0.1-3) unstable; urgency=medium
   * Build libunwind only on amd64 arm64 armhf i386
     mips64el ppc64el ppc64 riscv64 sparc sparc64
     Not supported on s390x for example
+  * libc++ & libc++ abi: only pass -DLIBCXXABI_USE_LLVM_UNWINDER=YES
+    if libunwind is available on the platform
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Aug 2021 11:42:20 +0200
 
